[iOS] Do not check for user engagement for bottom tip

The bottom toolbar tip doesn't use the isUserEngaged variable.
This allows us to display the tip multiple time during the isUserEngaged
period, for example during test.

Bug: 881829
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: Ia4559353aaf831abeb34fd01bf4f4911d1a3267e
Reviewed-on: https://chromium-review.googlesource.com/1215208
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590250}
Former-commit-id: ec8115ebf2ec33f026f909f915adf65e2a1cb199